@@ -27,7 +27,12 @@ main (int, char *[])
   //
   // In the process of doing this, the Test method provided by target
   // CORBA object will be invoked.
-  if (ACE_Service_Config::process_directive ("dynamic Client_Module Service_Object * Test_Client_Module:_make_Test_Client_Module() \"-k file://test.ior\"") != 0)
+  if (ACE_Service_Config::process_directive (
+        ACE_DYNAMIC_SERVICE_DIRECTIVE(
+          "Client_Module",
+          "Test_Client_Module",
+          "_make_Test_Client_Module",
+          "-k file://test.ior") != 0))
     {
 
       ACE_ERROR_RETURN ((LM_ERROR,
